# qob

./: CMakeLists.txt  README.md
include/: qob.h
src/: bs  bs.cpp  bs.h
